; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_list-device.c_fz_list_fill_path.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_list-device.c_fz_list_fill_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FZ_CMD_FILL_PATH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32, i32, i32*, float*, float, i32)* @fz_list_fill_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_list_fill_path(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32* %5, float* %6, float %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca float*, align 8
  %17 = alloca float, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store float* %6, float** %16, align 8
  store float %7, float* %17, align 4
  store i32 %8, i32* %18, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = load i32*, i32** %12, align 8
  %22 = load i32, i32* %14, align 4
  %23 = call i32 @fz_bound_path(i32* %20, i32* %21, i32* null, i32 %22)
  store i32 %23, i32* %19, align 4
  %24 = load i32*, i32** %10, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = load i32, i32* @FZ_CMD_FILL_PATH, align 4
  %27 = load i32, i32* %13, align 4
  %28 = load i32, i32* %18, align 4
  %29 = call i32 @fz_pack_color_params(i32 %28)
  %30 = or i32 %27, %29
  %31 = load i32*, i32** %12, align 8
  %32 = load float*, float** %16, align 8
  %33 = load i32*, i32** %15, align 8
  %34 = call i32 @fz_append_display_node(i32* %24, i32* %25, i32 %26, i32 %30, i32* %19, i32* %31, float* %32, i32* %33, float* %17, i32* %14, i32* null, i32* null, i32 0)
  ret void
}

declare dso_local i32 @fz_bound_path(i32*, i32*, i32*, i32) #1

declare dso_local i32 @fz_append_display_node(i32*, i32*, i32, i32, i32*, i32*, float*, i32*, float*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @fz_pack_color_params(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
